--- a/Add Users.html
+++ b/Add Users.html
@@ -7,8 +7,11 @@
 
 		$(document).ready(
             function(){
-                $('form').submit(function(){
-                    $('tbody').append("<tr><td" + $('input'[name="first_name"]).val()+'</td><td>');
+                $('#submit').click(function(){
+                    $('table').append('<tr><td>' + $('input[name="first_name"]').val() + '</td><td>'
+                    + $('input[name="last_name"]').val() + '</td><td>' 
+                    + $('input[name="email"]').val() + '</td><td>'
+                    + $('input[name="contact_no"]').val() + '</td></tr>');
                 return false;
                 
             });
@@ -34,16 +37,14 @@
     <h2>Add User</h2>
     <form action = "progress.php" method="post" id="form">
         <label for="first_name">First Name:</label>    
-            <input type="text" placeholder="first_name" name="first_name">
+            <input type="text" placeholder="First Name" name="first_name">
         <label for="last_name">Last Name:</label>    
-            <input type="text" placeholder="last_name" name="last_name">
+            <input type="text" placeholder="Last Name" name="last_name">
         <label for="email">Email Address:</label>  
-            <input type="text" placeholder="email" name="email">  
+            <input type="text" placeholder="Email" name="email">  
         <label for="contact_no">Phone:</label>  
-            <input type="text" placeholder="contact_no" name="contact_no">  
-        <input type="submit" value="Add User">
-
+            <input type="text" placeholder="Phone #" name="contact_no">  
+        <input id="submit" type="submit" value="Add User">
     </form>
-    
 </body>
 </html>
